2009-10-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Plug.

	* src/launcher/hd-launcher-grid.c (hd_launcher_grid_allocate,
	  hd_launcher_grid_dispose): Do not only dispose $blockers
	  but also unparent them, which drops the refcount to 0.

2009-10-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.108-1

2009-10-21 Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-sub-texture.c: use ref_sink, not ref, to fix unreffing
	  issues when we do tidy_sub_texture_new(clutter_texture_new(...))

2009-10-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/launcher/hd-launcher.c (hd_launcher_transition_app_start):
	  Don't leak $app_image.

2009-10-21  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes memory leak when opening and closing task launcher.

	* src/tidy/tidy-finger-scroll.c (tidy_finger_scroll_dispose,
	  show_scrollbars): Use g_signal_emit_by_name (timeline, "completed")
	  instead of clutter_timeline_stop (timeline); g_object_unref
	  (timeline) to not leak memory inside the effect.

2009-10-20 Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#142511 - Increse in memory usage of hildon-desktop while 
	                   playing games.
	Memory leaks in h-d caused by GetOverlayWindow without a Release.
	* src/mb/hd-comp-mgr.c
	* src/util/hd-util.c: Now use the variable for the overlay window
	  we always had in comp_mgr_clutter->priv
	* debian/control: Depends on new libmatchbox that allows us to
	  get at the overlay window

	Reverted NB#131081 again (causes issues with rotation)
	* src/home/hd-render-manager.c
	* src/mb/hd-comp-mgr.c

2009-10-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Implement swipe gesture in home edit mode to pan between views.

	Fixes: NB#142940 - Changing desktop view while in the layout mode

	* src/home/hd-home-view.c (_HdHomeViewPrivate::pan_gesture_start_x,
	  _HdHomeViewPrivate::pan_gesture_start_y, hd_home_view_shown,